test/fixtures/public/fail/semantic/ThisStaticContext.jmm

class ThisStaticContext {
    int a;

    public static void main(String[] args) {
        int b;
        a = 1;
        b = a;
        this;
    }
}